# C-Cpp-CSharp-projects

./: README.md
C/binary-search-tree/: CMakeLists.txt  main.c
C/hexdump/: CMakeLists.txt  main.c  test.txt
C/life/: CMakeLists.txt  life  main  main.c
C/snake/: CMakeLists.txt  main.c  snake
C/snake/Models/: entity.c  entity.h  game_data.c  game_data.h  point.c  point.h  trophy.c  trophy.h
C/snake/Utils/: terminalController.c  terminalController.h
C/tac-bash-command/: CMakeLists.txt  main.c  tac
C/toyforth/: CMakeLists.txt  main.c
